--- a/ricaun.Revit.Mvvm.Example/Views/MainView.xaml
+++ b/ricaun.Revit.Mvvm.Example/Views/MainView.xaml
@@ -28,8 +28,16 @@
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                <Button Grid.Column="0" Command="{Binding AddCommand}" CommandParameter="{Binding Model.Item}">Add</Button>
+                <Button Grid.Column="0" Command="{Binding AddCommand}">Add</Button>
                 <Button Grid.Column="1" Command="{Binding RemoveCommand}" CommandParameter="{Binding Model.Item}">Remove</Button>
+            </Grid>
+            <Grid Height="24">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Button Grid.Column="0" Command="{Binding AsyncAddCommand}">Async Add</Button>
+                <Button Grid.Column="1" Command="{Binding AsyncRemoveCommand}" CommandParameter="{Binding Model.Item}">Async Remove</Button>
             </Grid>
         </StackPanel>
     </Grid>
