--- a/ricaun.Revit.Mvvm.Example/Views/MainView.xaml
+++ b/ricaun.Revit.Mvvm.Example/Views/MainView.xaml
@@ -21,7 +21,7 @@
             </Grid>
             <ListBox Height="120" Margin="0 0 0 8" 
                      ItemsSource="{Binding Model.Items}" 
-                     SelectedItem="{Binding Model.Item}"
+                     SelectedItem="{Binding Model.Item, Mode=TwoWay}"
                      ></ListBox>
             <Grid Height="24">
                 <Grid.ColumnDefinitions>
